--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
     </dependency>
+    <dependency>
+    	<groupId>com.oracle.database.jdbc</groupId>
+    	<artifactId>ojdbc11</artifactId>
+    	<version>23.6.0.24.10</version>
+	</dependency>
+
   </dependencies>
 
   <build>
