--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,11 @@ name: Build
 on:
   push:
     branches:
-      - main
- 
+      - master
+      - ange
+      - clara
+      - lina
+      - olivia
  
 jobs:
   build:
