--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>3.1.2</version>
         </plugin>
+	<plugin>
+    	  <groupId>org.sonarsource.scanner.maven</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>3.9.1.2184</version> 
+	</plugin>
       </plugins>
     </pluginManagement>
   </build>
