--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,13 @@
     	<groupId>com.oracle.database.jdbc</groupId>
     	<artifactId>ojdbc11</artifactId>
     	<version>23.6.0.24.10</version>
-	</dependency>
+    </dependency>
+    <dependency>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>5.0.0.4389</version>
+    </dependency>
+
   </dependencies>
 
   <build>
