--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
+    
+    <sonar.projectKey>projetJava</sonar.projectKey>
+    <sonar.projectName>projetJava</sonar.projectName>
+    <sonar.host.url>${env.SONAR_HOST_URL}</sonar.host.url>
+    <sonar.login>${env.SONAR_TOKEN}</sonar.login>
   </properties>
 
   <dependencies>
