--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,11 @@
     <artifactId>sonar-maven-plugin</artifactId>
     <version>3.11.0.3922</version>
 </dependency>
-
+     <dependency>
+    <groupId>at.favre.lib</groupId>
+    <artifactId>bcrypt</artifactId>
+    <version>0.10.2</version>
+</dependency>
   </dependencies>
 
   <build>
