--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,12 @@
       <artifactId>ojdbc11</artifactId>
       <version>23.6.0.24.10</version>
     </dependency>
+    <!-- cahngement de version -->
     <dependency>
       <groupId>org.sonarsource.scanner.maven</groupId>
       <artifactId>sonar-maven-plugin</artifactId>
-      <version>3.11.0.3922</version>
+      <version>5.0.0.4389</version>
+    </dependency>
     </dependency>
     <dependency>
       <groupId>at.favre.lib</groupId>
