--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
       <artifactId>bcrypt</artifactId>
       <version>0.10.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.mindrot</groupId>
+      <artifactId>jbcrypt</artifactId>
+      <version>0.4</version>
+    </dependency>
   </dependencies>
 
   <build>
