--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,14 @@
       <artifactId>ojdbc11</artifactId>
       <version>23.6.0.24.10</version>
     </dependency>
-    <!-- cahngement de version -->
+    <!-- Changement de version -->
+    <!-- Dependance Sonar -->
     <dependency>
       <groupId>org.sonarsource.scanner.maven</groupId>
       <artifactId>sonar-maven-plugin</artifactId>
       <version>5.0.0.4389</version>
     </dependency>
+    <!-- Dependance bcrypt-->
     <dependency>
       <groupId>at.favre.lib</groupId>
       <artifactId>bcrypt</artifactId>
@@ -43,11 +45,6 @@
       <groupId>org.mindrot</groupId>
       <artifactId>jbcrypt</artifactId>
       <version>0.4</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-compiler-plugin</artifactId>
-      <version>3.13.0</version>
     </dependency>
   </dependencies>
 
@@ -90,6 +87,15 @@
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>3.1.2</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.13.0</version>
+          <configuration>
+            <source>17</source>  <!-- Version Java source -->
+            <target>17</target>  <!-- Version Java bytecode -->
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
