Modification Class ConnexionVue.java : nouvelle interface + Swing interface

--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,13 @@
       <artifactId>jbcrypt</artifactId>
       <version>0.4</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.miglayout/miglayout-swing -->
     <dependency>
-      <groupId>com.github.miglayout</groupId>
+      <groupId>com.miglayout</groupId>
       <artifactId>miglayout-swing</artifactId>
-      <version>5.0</version> <!-- Vérifie la version correcte -->
+      <version>5.0</version>
     </dependency>
+
 
   </dependencies>
 
