Ajout des statistiques et d'un graphique à l'accueil, ajout de l'icône calendrier et quelques corrections au niveau de la création d'une mission

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,18 @@
         <artifactId>flatlaf</artifactId>
         <version>3.5.4</version>
       </dependency>
+    <!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>1.5.4</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.toedter/jcalendar -->
+    <dependency>
+      <groupId>com.toedter</groupId>
+      <artifactId>jcalendar</artifactId>
+      <version>1.4</version>
+    </dependency>
 
   </dependencies>
 
