--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,17 @@
   </dependencies>
 
   <build>
+
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>**/*</include>
+        </includes>
+      </resource>
+    </resources>
+
+
     <pluginManagement>
       <plugins>
         <plugin>
